# devserial-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
aur/: PKGBUILD
src/: config.rs  esp.rs  lib.rs  main.rs  monitor.rs  port_manager.rs  reader.rs  server.rs  standalone.rs  state.rs  storage.rs  tui.rs
src/testutil/: data_generator.rs  mock_serial.rs  mod.rs
tests/: cli.rs  lifecycle.rs
